GH-1743 ModbusDeviceService tests added